Add native access flags for JavaFX modules in distribution.gradle
Signed-off-by: Vest <Vest@users.noreply.github.com>